--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,98 @@
+:root {
+    --sol: #F39c12;
+    --lua: #87CEEB;
 
-:root{
-    --sol : #F39c12;
-    --lua : #87CEEB;
+    --light_corpo: #d3dbec;
+    --light_menu: #fff;
+    --light_titulo: #1300be;
+    --light_texto: #000000;
 
-    --light_corpo : #d3dbec;
-    --light_menu : #fff;
-    --light_titulo : #1300be;
-    --light_texto : #000000;
+    --dark_corpo: #000000;
+    --dark_menu: #181717;
+    --dark_titulo: #881b92;
+    --dark_texto: #fff;
 
-    --dark_corpo : #000000;
-    --dark_menu : #181717;
-    --dark_titulo : #881b92;
-    --dark_texto : #fff;
-
-    --end : #333;
+    --end: #333;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Playfair Display", serif;
 }
 
-
-body{
+body {
     height: 1600vh;
     background-color: var(--light_corpo);
+    display: flex;
 }
 
-/*********************** inicio do saidbar ********************/
+/******** inicio do sidebar *******/
 
-
-.contencao{
+.contencao {
     height: 100%;
-    width: 81px;/**/
+    width: 81px;
 }
 
-nav.menu-lateral{
-    width: 80px;/**/
-    height: 150vh; /*pode ser 100%, no original ele pega a altura do bory, aqui é na conetação*/
+nav.menu-lateral {
+    width: 80px;
+    height: 100vh;
     background-color: var(--light_menu);
-    padding: 40px 0px 40px 0px;
+    padding: 40px 0;
     box-shadow: 3px 0 0 var(--light_titulo);
-
     position: fixed;
     top: 0;
     left: 0;
     transition: .5s;
-
     overflow: hidden;
     z-index: 1;
 }
 
-nav.menu-lateral.expandir{
+nav.menu-lateral.expandir {
     width: 300px;
 }
 
-.btn-expandir{
+.btn-expandir {
     width: 100%;
     padding-left: 10px;
     left: 22px;
     top: 1%;
     position: absolute;
     transform: scale(1.3);
-    
 }
 
-.btn-expandir > i{
+.btn-expandir > i {
     cursor: pointer;
     font-size: 24px;
     color: var(--light_texto);
     padding: 20px 4%;
 }
 
-ul{
+ul {
     height: 100%;
     list-style-type: none;
     padding-top: 35px;
 }
 
-ul li.item-menu{
+ul li.item-menu {
     transition: .2s;
 }
 
-ul li.ativo{
+ul li.ativo {
     background-color: var(--light_titulo);
 }
 
-
-ul li.item-menu:hover{
+ul li.item-menu:hover {
     background-color: var(--light_titulo);
-
 }
 
-ul li.item-menu:hover, ul li.item-menu a:hover{
-  color: var(--light_menu);
-
+ul li.item-menu:hover,
+ul li.item-menu a:hover {
+    color: var(--light_menu);
 }
 
-ul li.item-menu a{
+ul li.item-menu a {
     color: var(--light_texto);
     text-decoration: none;
     font-size: 20px;
@@ -109,102 +102,100 @@ ul li.item-menu a{
     line-height: 40px;
     transition: .2s;
 }
-/*parte das letras virem*/
-ul li.item-menu a .txt-link{
+
+
+ul li.item-menu a .txt-link {
     margin-left: 70px;
     transition: .7s;
     opacity: 0;
 }
 
-nav.menu-lateral.expandir .txt-link{
+nav.menu-lateral.expandir .txt-link {
     margin-left: 40px;
     opacity: 1;
 }
-/*********************************************/
 
-ul li.item-menu a .icon > i{
+/***************/
+
+ul li.item-menu a .icon > i {
     font-size: 30px;
     margin-left: 20px;
-
 }
 
-#mode_icon{
+#mode_icon {
     color: var(--light_texto);
     cursor: pointer;
     position: absolute;
     left: 30px;
     transform: scale(1.9);
-    top: 60%;
+    top: 92%;
 }
 
-
-/*********************** final do saidbar ********************/
-.principal{
-    min-width: calc(100% - 81px);
+/******** final do sidebar *******/
+.principal {
+    width: calc(100% - 81px);
     height: 1600vh;
-    left: 81px;
-    position: absolute;
-    display: flex ;
+    margin-left: 81px;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
-article{
-    top: 0;
+article {
     width: 900px;
     height: 90vh;
-    left: 14%;
-    position: absolute;
 }
 
-header{
-    position: fixed ;
+header {
+    position: fixed;
     top: 0;
     transition: 1s;
-    width: 67.5%;
+    width: 69%;
+    left: 21.3%;
     border-radius: 32px;
-    height: 70px;;
+    height: 70px;
     z-index: 0;
 }
 
-header.rolagem{
+header.rolagem {
     background-color: var(--light_menu);
     top: 15px;
 }
-                                        /* quando rolar o scroll muda de cor*/
-header.rolagem a{
-    color: var(--light_titulo);
-}   
 
-header ul{
+/* quando rolar o scroll muda de cor*/
+header.rolagem a {
+    color: var(--light_titulo);
+}
+
+header ul {
     list-style: none;
 }
 
-header ul li{
+header ul li {
     margin: 0 40px;
     display: inline-block;
     transition: 0.5s;
 }
 
-header ul li a{
+header ul li a {
     color: var(--light_corpo);
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
 }
 
-.trans:hover{
+.trans:hover {
     text-decoration: underline;
     transform: scale(1.05);
-    transition: 0.3s ease-in-out; /*efeito de transição de todos os elementos*/
+    transition: 0.3s ease-in-out; 
 }
 
-.lista:hover > :not(:hover){ /*seleciona todos os elementos que não estão sendo hover*/
+.lista:hover > :not(:hover) {
     opacity: 0.3;
 }
 
-.banner{
+.banner {
     height: 100%;
     background-image: url(../imagens/O1GnXT.gif);
     background-position: center;
@@ -214,129 +205,15 @@ header ul li a{
     width: 100%;
 }
 
-
-
-
-.studi{
-    background-color:var(--light_menu) ;
+.studi,
+.my,
+.habili,
+.entregas,
+.projetos {
+    background-color: var(--light_menu);
     border-radius: 5%;
     width: 900px;
     height: 200vh;
-    left: 14%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    }
-    
-    .studi h1{
-        color: var(--light_titulo);
-        text-align: center;
-        margin-bottom: 20px;
-        margin-top: 10px;
-    }
-    
-    .display{
-        max-width: 100%;
-        height: 70vh;
-        display: flex;
-        justify-content: space-around;
-        gap: 15px;
-        padding: 0px 20px 0px 20px;
-    }
-    
-    .texto{
-        width: 50%;
-        padding: 20px;
-        font-size: 20px;
-        border-radius: 4%;
-        background-color: var(--light_titulo);
-    }
-    
-    .texto p{
-        margin: 10px 0;
-        color: var(--light_menu);
-    }
-    
-    iframe{
-        width: 50%;
-        overflow: hidden;
-        border-radius: 3%;
-        height: 100%;
-    }
-    
-    /* Estilo para a tabela de disciplinas */
-    .tabela-disciplinas {
-        width: 90%; /* Largura total */
-        border-collapse: collapse; /* Colapsa as bordas para um único traço */
-        border-radius: 38px;
-        color: var(--light_corpo); /* Cor do texto */ 
-        overflow: hidden;
-        margin-top: 18px;
-    }
-    
-    
-    .tabela-disciplinas th, .tabela-disciplinas td {
-        text-align: left; /* Alinhamento de texto à esquerda */
-        padding: 8px; /* Espaçamento interno */
-    }
-    
-    /* Cores alternadas para as linhas */
-    .tabela-disciplinas tr:nth-child(even) {
-        background-color: var(--end); /* Cor de fundo para linhas pares */
-    }
-    
-    .tabela-disciplinas tr:nth-child(odd) {
-        background-color: #444; /* Cor de fundo para linhas ímpares */
-    }
-    
-    .tabela-disciplinas th {
-        background-color: #222; /* Cor de fundo para o cabeçalho */
-    }
-
-.my{
-    background-color:var(--light_menu) ;
-    border-radius: 5%;
-    width: 900px;
-    height: 200vh;
-    left: 14%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.habili{
-    background-color:var(--light_menu) ;
-    border-radius: 5%;
-    width: 900px;
-    height: 200vh;
-    left: 14%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.entregas{
-    background-color:var(--light_menu) ;
-    border-radius: 5%;
-    width: 900px;
-    height: 200vh;
-    left: 14%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.projetos{
-    background-color:var(--light_menu) ;
-    border-radius: 5%;
-    width: 900px;
-    height: 200vh;
-    left: 14%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -344,7 +221,72 @@ header ul li a{
     gap: 10px;
 }
 
-footer{
+.studi h1 {
+    color: var(--light_titulo);
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+.display {
+    max-width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: space-around;
+    gap: 15px;
+    padding: 0px 20px;
+}
+
+.texto {
+    width: 50%;
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 4%;
+    background-color: var(--light_titulo);
+}
+
+.texto p {
+    margin: 10px 0;
+    color: var(--light_menu);
+}
+
+iframe {
+    width: 50%;
+    overflow: hidden;
+    border-radius: 3%;
+    height: 100%;
+}
+
+/* Estilo para a tabela de disciplinas */
+.tabela-disciplinas {
+    width: 90%;
+    border-collapse: collapse;
+    border-radius: 38px;
+    color: var(--light_corpo);
+    overflow: hidden;
+    margin-top: 18px;
+}
+
+.tabela-disciplinas th,
+.tabela-disciplinas td {
+    text-align: left;
+    padding: 8px;
+}
+
+/* Cores alternadas para as linhas */
+.tabela-disciplinas tr:nth-child(even) {
+    background-color: var(--end);
+}
+
+.tabela-disciplinas tr:nth-child(odd) {
+    background-color: #444;
+}
+
+.tabela-disciplinas th {
+    background-color: #222;
+}
+
+footer {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -353,11 +295,10 @@ footer{
     font-size: 30px;
     background-color: var(--end);
     color: var(--light_corpo);
-
 }
 
-    /**************************** modo dark *********************************8*/
-.dark{
+/********** modo dark ***********/
+.dark {
     background-color: var(--dark_corpo);
     color: var(--dark_texto);
-}
+} 
