--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,58 @@ ul li.item-menu a .icon > i {
     margin-left: 20px;
 }
 
+.lingua {
+    transform: scale(1.9);
+    position: absolute;
+    left: 28px;
+    top: 76%;
+}
+
+.checkbox {
+    position: absolute;
+    opacity: 0;
+}
+
+.label{
+    background-color: var(--dark_corpo);
+    border-radius: 50px;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 5px;
+    position: relative;
+    height: 50px;
+    width: 26px;
+
+    transform: scale(1.0);
+    flex-direction: column;
+}
+
+.ball{
+    background-color: var(--light_menu);
+    border-radius: 50px;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 22px;
+    width: 22px;
+
+    transform: translateY(0px);
+    transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball{
+    transform: translateY(24px);
+}
+
+.img {
+    width: 20px;
+    height: 20px;
+}
+
 #mode_icon {
     cursor: pointer;
     position: absolute;
