--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,6 @@ nav.menu-lateral.expandir {
 
 nav.menu-lateral.expandir .btn-expandir{
     padding-left: 35px;
-    
-
 }
 
 .btn-expandir > i {
@@ -133,7 +131,7 @@ ul li.item-menu a .icon > i {
     transform: scale(1.9);
     position: absolute;
     left: 28px;
-    top: 76%;
+    top: 77.7%;
 }
 
 .checkbox {
@@ -186,7 +184,7 @@ ul li.item-menu a .icon > i {
     position: absolute;
     left: 30px;
     transform: scale(1.9);
-    top: 92%;
+    top: 92.7%;
 }
 
 .fa-sun {
@@ -208,7 +206,7 @@ ul li.item-menu a .icon > i {
 }
 
 article {
-    width: 900px;
+    width: 100%;
     height: 90vh;
     display: flex;
     align-items: center;
@@ -295,7 +293,7 @@ header ul li a {
     gap: 10px;
 }
 
-.studi h1 {
+h1.titulo{
     color: var(--light_titulo);
     text-align: center;
     margin-bottom: 20px;
@@ -446,17 +444,58 @@ footer {
 }
 
 /********** modo dark ***********/
-.dark {
+body.dark{
     background-color: var(--dark_corpo);
-    color: var(--dark_texto);
-} 
+}
 
-header.rolagem.dark, nav.menu-lateral.dark {
+header.rolagem.dark {
     background-color: var(--dark_menu);
+}
+
+header.rolagem.dark a {
+    color: var(--dark_titulo);
+}
+
+nav.menu-lateral.dark {
+    background-color: var(--dark_menu);
+    box-shadow: 3px 0 0 #881b92;
 }
 
 ul li.item-menu.dark a {
     color: var(--dark_texto);
+}
+
+
+ul li.ativo.dark {
+    background-color: var(--dark_titulo);
+}
+
+ul li.item-menu.dark:hover {
+    background-color: var(--dark_titulo);
+}
+
+ul li.item-menu:hover,
+ul li.item-menu a:hover {
+    color: var(--dark_menu);
+}
+
+.btn-expandir.dark > i {
+    color: var(--light_menu);
+}
+
+.studi.dark,
+.my.dark,
+.habili.dark,
+.entregas.dark,
+.projetos.dark{
+    background-color: var(--dark_menu);
+}
+
+h1.titulo.dark{
+    color: var(--dark_titulo);
+}
+.texto.dark{
+    background-color: var(--dark_titulo);
 }
 
 
