--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     --dark_menu: #181717;
     --dark_titulo: #881b92;
     --dark_texto: #fff;
+    --dark_detalhe: #c521aa;
 
     --end: #333;
 }
@@ -267,21 +268,290 @@ header ul li a {
     opacity: 0.3;
 }
 
-.banner {
+/******************************************   slider   *****************************************/
+.slider{
     height: 100%;
-    background-image: url(../imagens/O1GnXT.gif);
-    background-position: center;
-    background-size: cover;
-    border-radius: 2%;
-    overflow: hidden;
+    /*aqui tinha um margin-top:-50px*/
     width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+.slider .list .item{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0 0 0 0;/* subsitui o left, top etc */
+}
+.slider .list .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* o conetuedo é redmensionado para cobirir completamente o container, mas mantendo a sua proporção*/
+}
+.slider .list .item .content{
+    position: absolute;
+    top: 20%;
+    width: 1140px;
+    max-width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-right: 30%;
+    box-sizing: border-box;
+    color: #fff;
+    text-shadow: 0 5px 10px #0004;
 }
 
+.slider .list .item .content .title,
+.slider .list .item .content .type{
+    font-size: 5em;
+    font-weight: bold; /* trata a grossura da letra, bold deixa maior que o normal*/
+    line-height: 1.3em;
+}
+.slider .list .item .type{
+    color: var(--light_titulo);
+}
+.slider .list .item .button{
+    display: grid;
+    grid-template-columns: repeat(2, 130px);/*layout das colunas, repeat ta criando um padrão de repetição */
+    grid-template-rows: 40px;
+    gap: 5px;
+    margin-top: 20px;
+}
+.slider .list .item .button button{
+    border-radius: 10px;
+    border: none;
+    background-color: var(--light_titulo);
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.4s;
+    letter-spacing: 2px;/* espaçamento entre as caractres do texto*/
+}
+.slider .list .item .button button a{
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    padding: 10px;
+    text-align: center;
+}
+
+
+.slider .list .item .button button:hover{
+    letter-spacing: 3px;
+}
+.slider .list .item .button button:nth-child(2){
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #eee;
+} /* permite que selecione um ou mais elementos com base na sua posição entre os irmãos do documento*, nesse caso é o segundo elemento dentro do pai/
+
+
+
+
+
+/* Thumbnail Section  */
+.thumbnail{
+    position: absolute;
+    bottom: 50px;
+    left: 60%;
+    width: max-content;
+    z-index: 3;
+    display: flex;
+    gap: 20px;
+}
+
+.thumbnail .item{
+    width: 150px;
+    height: 220px;
+    flex-shrink: 0; /* define a capacidade de encolhimento de um elemnto caso necessario e o fator também*/
+    position: relative;
+}
+
+.thumbnail .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
+}
+
+/* nextPrevArrows Section  */
+.nextPrevArrows{
+    position: absolute;
+    top: 80%;
+    right: 52%;
+    z-index: 3;
+    width: 300px;
+    max-width: 30%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.nextPrevArrows button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--light_titulo);
+    border: none;
+    color: #fff;
+    font-family: monospace;
+    font-weight: bold;
+    transition: .5s;
+    cursor: pointer;
+}
+.nextPrevArrows button:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+/* Animation Part */
+.slider .list .item:nth-child(1){
+    z-index: 1;
+}
+
+
+/* animation text in first item */
+.slider .list .item:nth-child(1) .content .title,
+.slider .list .item:nth-child(1) .content .type,
+.slider .list .item:nth-child(1) .content .description,
+.slider .list .item:nth-child(1) .content .buttons
+{
+    transform: translateY(50px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent .5s 1s linear 1 forwards;
+}
+@keyframes showContent{
+    to{
+        transform: translateY(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+.slider .list .item:nth-child(1) .content .title{
+    animation-delay: 0.4s !important;
+}
+.slider .list .item:nth-child(1) .content .type{
+    animation-delay: 0.6s !important;
+}
+.slider .list .item:nth-child(1) .content .description{
+    animation-delay: 0.8s !important;
+}
+.slider .list .item:nth-child(1) .content .buttons{
+    animation-delay: 1s !important;
+}
+
+
+
+
+/* Animation for next button click */
+.slider.next .list .item:nth-child(1) img{
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 30px;
+    animation: showImage .5s linear 1 forwards;
+}
+
+@keyframes showImage{
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+.slider.next .thumbnail .item:nth-last-child(1){
+    overflow: hidden;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.slider.prev .list .item img{
+    z-index: 3;
+}
+
+
+@keyframes showThumbnail{
+    from{
+        width: 0;
+        opacity: 0;
+    }
+}
+
+
+.slider.next .thumbnail{
+    animation: effectNext .5s linear 1 forwards;
+}
+
+@keyframes effectNext{
+    from{
+        transform: translateX(150px);
+    }
+}
+
+
+
+/* Animation for prev button click */
+.slider.prev .list .item:nth-child(2){
+    z-index: 2;
+}
+
+.slider.prev .list .item:nth-child(2) img{
+    animation: outFrame 0.5s linear 1 forwards;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+@keyframes outFrame{
+    to{
+        width: 150px;
+        height: 220px;
+        bottom: 50px;
+        left: 50%;
+        border-radius: 20px;
+    }
+}
+
+.slider.prev .thumbnail .item:nth-child(1){
+    overflow: hidden;
+    opacity: 0;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.slider.next .nextPrevArrows button,
+.slider.prev .nextPrevArrows button{
+    pointer-events: none;
+}
+
+
+.slider.prev .list .item:nth-child(2) .content .title,
+.slider.prev .list .item:nth-child(2) .content .type,
+.slider.prev .list .item:nth-child(2) .content .description,
+.slider.prev .list .item:nth-child(2) .content .buttons
+{
+    animation: contentOut 1.5s linear 1 forwards!important;
+}
+
+@keyframes contentOut{
+    to{
+        transform: translateY(-150px);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+@media screen and (max-width: 678px) {
+    .slider .list .item .content{
+        padding-right: 0;
+    }
+    .slider .list .item .content .title{
+        font-size: 50px;
+    }
+}
+
+/**************************************** fim *********************************************************/
 .studi,
 .my,
-.habili,
-.entregas,
-.projetos {
+.habili{
     background-color: var(--light_menu);
     border-radius: 5%;
     width: 1100px;
@@ -292,6 +562,81 @@ header ul li a {
     flex-direction: column;
     gap: 10px;
 }
+
+.projetos{
+    background-color: var(--light_menu);
+    border-radius: 5%;
+    width: 1200px;
+    height: 300vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+/*************************************************** entregas ********************************************/
+.entregas {
+    background-color: var(--light_corpo);
+    border-radius: 5%;
+    width: 1100px;
+    height: 130vh;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.tab-buttons {
+    display: flex;
+    gap: 6px;
+}
+
+.tab-btn {
+    width: 100%;
+    border: none;
+    color: var(--light_texto);
+    background-color: var(--light_titulo);
+    border-radius: 8px 8px 0px 0px;
+    font-weight: 500;
+    padding: 8px;
+    cursor: pointer;
+    transition: background-color .3s ease;
+}
+
+.tab-btn.active {
+    background-color: var(--light_menu);
+}
+
+.tab-btn:hover {
+    background-color: #a5b4fc;
+}
+
+.conteudo {
+    display: none;
+}
+
+.conteudo.show {
+    display: flex;
+    gap: 14px;
+    background-color: var(--light_menu);
+    border-radius: 0 0 5% 5%;
+    padding: 16px;
+    height:96%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-img {
+    width: 90%;
+    height: 350px;
+    object-fit: cover;/* ponto de atenção para alterações fulturas*/
+}
+
+p.content-description, .content-title{
+    color: var(--light_texto);
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+/**************************fim das entregas *****************************/
 
 h1.titulo{
     color: var(--light_titulo);
@@ -487,10 +832,39 @@ ul li.item-menu a:hover {
 .studi.dark,
 .my.dark,
 .habili.dark,
-.entregas.dark,
 .projetos.dark{
     background-color: var(--dark_menu);
 }
+
+.entregas.dark{
+    background-color: var(--dark_corpo);
+}
+
+.tab-btn.dark {
+    color: var(--light_menu);
+    background-color: var(--dark_titulo);
+}
+
+.tab-btn.active.dark {
+    background-color: var(--dark_menu);
+}
+
+.tab-btn.dark:hover {
+    background-color: var(--dark_detalhe);
+}
+
+.conteudo {
+    display: none;
+}
+
+.conteudo.show.dark {
+    background-color:var(--dark_menu);
+}
+
+p.content-description.dark, .content-title.dark{
+    color: var(--dark_texto);
+}
+
 
 h1.titulo.dark{
     color: var(--dark_titulo);
@@ -499,276 +873,19 @@ h1.titulo.dark{
     background-color: var(--dark_titulo);
 }
 
-
-
-
-.slider{
-    height: 100%;
-    /*aqui tinha um margin-top:-50px*/
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-.slider .list .item{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    inset: 0 0 0 0;
-}
-.slider .list .item img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.slider .list .item .content{
-    position: absolute;
-    top: 20%;
-    width: 1140px;
-    max-width: 80%;
-    left: 50%;
-    transform: translateX(-50%);
-    padding-right: 30%;
-    box-sizing: border-box;
-    color: #fff;
-    text-shadow: 0 5px 10px #0004;
+.slider .list .item .type.dark{
+    color: var(--dark_titulo);
 }
 
-.slider .list .item .content .title,
-.slider .list .item .content .type{
-    font-size: 5em;
-    font-weight: bold;
-    line-height: 1.3em;
-}
-.slider .list .item .type{
-    color: #14ff72cb;
-}
-.slider .list .item .button{
-    display: grid;
-    grid-template-columns: repeat(2, 130px);
-    grid-template-rows: 40px;
-    gap: 5px;
-    margin-top: 20px;
-}
-.slider .list .item .button button{
-    border: none;
-    background-color: #eee;
-    font-weight: 500;
-    cursor: pointer;
-    transition: 0.4s;
-    letter-spacing: 2px;
+.slider .list .item .button.dark button{
+    background-color: var(--dark_titulo);
 }
 
-
-.slider .list .item .button button:hover{
-    letter-spacing: 3px;
-}
-.slider .list .item .button button:nth-child(2){
-    background-color: transparent;
-    border: 1px solid #fff;
-    color: #eee;
+.nextPrevArrows.dark button{
+    background-color: var(--dark_titulo);
 }
 
-
-
-
-
-/* Thumbnail Section  */
-.thumbnail{
-    position: absolute;
-    bottom: 50px;
-    left: 60%;
-    width: max-content;
-    z-index: 3;
-    display: flex;
-    gap: 20px;
-}
-
-.thumbnail .item{
-    width: 150px;
-    height: 220px;
-    flex-shrink: 0;
-    position: relative;
-}
-
-.thumbnail .item img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-    box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
-}
-
-/* nextPrevArrows Section  */
-.nextPrevArrows{
-    position: absolute;
-    top: 80%;
-    right: 52%;
-    z-index: 3;
-    width: 300px;
-    max-width: 30%;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-}
-.nextPrevArrows button{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: #14ff72cb;
-    border: none;
-    color: #fff;
-    font-family: monospace;
-    font-weight: bold;
-    transition: .5s;
-    cursor: pointer;
-}
-.nextPrevArrows button:hover{
+.nextPrevArrows.dark button:hover{
     background-color: #fff;
     color: #000;
-}
-
-/* Animation Part */
-.slider .list .item:nth-child(1){
-    z-index: 1;
-}
-
-
-/* animation text in first item */
-.slider .list .item:nth-child(1) .content .title,
-.slider .list .item:nth-child(1) .content .type,
-.slider .list .item:nth-child(1) .content .description,
-.slider .list .item:nth-child(1) .content .buttons
-{
-    transform: translateY(50px);
-    filter: blur(20px);
-    opacity: 0;
-    animation: showContent .5s 1s linear 1 forwards;
-}
-@keyframes showContent{
-    to{
-        transform: translateY(0px);
-        filter: blur(0px);
-        opacity: 1;
-    }
-}
-.slider .list .item:nth-child(1) .content .title{
-    animation-delay: 0.4s !important;
-}
-.slider .list .item:nth-child(1) .content .type{
-    animation-delay: 0.6s !important;
-}
-.slider .list .item:nth-child(1) .content .description{
-    animation-delay: 0.8s !important;
-}
-.slider .list .item:nth-child(1) .content .buttons{
-    animation-delay: 1s !important;
-}
-
-
-
-
-/* Animation for next button click */
-.slider.next .list .item:nth-child(1) img{
-    width: 150px;
-    height: 220px;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    border-radius: 30px;
-    animation: showImage .5s linear 1 forwards;
-}
-
-@keyframes showImage{
-    to{
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border-radius: 0;
-    }
-}
-
-.slider.next .thumbnail .item:nth-last-child(1){
-    overflow: hidden;
-    animation: showThumbnail .5s linear 1 forwards;
-}
-.slider.prev .list .item img{
-    z-index: 3;
-}
-
-
-@keyframes showThumbnail{
-    from{
-        width: 0;
-        opacity: 0;
-    }
-}
-
-
-.slider.next .thumbnail{
-    animation: effectNext .5s linear 1 forwards;
-}
-
-@keyframes effectNext{
-    from{
-        transform: translateX(150px);
-    }
-}
-
-
-
-/* Animation for prev button click */
-.slider.prev .list .item:nth-child(2){
-    z-index: 2;
-}
-
-.slider.prev .list .item:nth-child(2) img{
-    animation: outFrame 0.5s linear 1 forwards;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-}
-@keyframes outFrame{
-    to{
-        width: 150px;
-        height: 220px;
-        bottom: 50px;
-        left: 50%;
-        border-radius: 20px;
-    }
-}
-
-.slider.prev .thumbnail .item:nth-child(1){
-    overflow: hidden;
-    opacity: 0;
-    animation: showThumbnail .5s linear 1 forwards;
-}
-.slider.next .nextPrevArrows button,
-.slider.prev .nextPrevArrows button{
-    pointer-events: none;
-}
-
-
-.slider.prev .list .item:nth-child(2) .content .title,
-.slider.prev .list .item:nth-child(2) .content .type,
-.slider.prev .list .item:nth-child(2) .content .description,
-.slider.prev .list .item:nth-child(2) .content .buttons
-{
-    animation: contentOut 1.5s linear 1 forwards!important;
-}
-
-@keyframes contentOut{
-    to{
-        transform: translateY(-150px);
-        filter: blur(20px);
-        opacity: 0;
-    }
-}
-@media screen and (max-width: 678px) {
-    .slider .list .item .content{
-        padding-right: 0;
-    }
-    .slider .list .item .content .title{
-        font-size: 50px;
-    }
 }
