--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --light_menu: #fff;
     --light_titulo: #1300be;
     --light_texto: #000000;
+    --light_detalhe: #a5b4fc;
 
     --dark_corpo: #000000;
     --dark_menu: #181717;
@@ -204,6 +205,7 @@ ul li.item-menu a .icon > i {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;/*tem que se ver obrigatório ter se não buga tudo*/
 }
 
 article {
@@ -412,7 +414,8 @@ header ul li a {
 .slider .list .item:nth-child(1) .content .title,
 .slider .list .item:nth-child(1) .content .type,
 .slider .list .item:nth-child(1) .content .description,
-.slider .list .item:nth-child(1) .content .buttons
+.slider .list .item:nth-child(1) .content .buttons,
+.slider .list .item:nth-child(1) .content .buttons a
 {
     transform: translateY(50px);
     filter: blur(20px);
@@ -527,7 +530,8 @@ header ul li a {
 .slider.prev .list .item:nth-child(2) .content .title,
 .slider.prev .list .item:nth-child(2) .content .type,
 .slider.prev .list .item:nth-child(2) .content .description,
-.slider.prev .list .item:nth-child(2) .content .buttons
+.slider.prev .list .item:nth-child(2) .content .buttons, 
+.slider.prev .list .item:nth-child(2) .content .buttons a
 {
     animation: contentOut 1.5s linear 1 forwards!important;
 }
@@ -549,26 +553,23 @@ header ul li a {
 }
 
 /**************************************** fim *********************************************************/
-.studi {
-    background-color: var(--light_menu);
-    border-radius: 5%;
-    width: 1100px;
-    height: 200vh;
-    align-items: center;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    gap: 10px;
-}
 
 .habili{
     background-color: var(--light_menu);
-    border-radius: 5%;
     width: 100%;
     height: 200vh;
     align-items: center;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+}
+
+.habili .titulo{
+    color: var(--light_titulo);
+    text-align: center;
+    margin-bottom: 15px;
+    margin-top: 100px;
+    transform: scale(1.5);
 }
 
 .espaco{
@@ -599,93 +600,55 @@ header ul li a {
    color: var(--light_menu);
 }
 
-.projetos{
-    background-color: var(--light_menu);
-    border-radius: 5%;
-    width: 1200px;
-    height: 300vh;
-    align-items: center;
+.logos{
+    width: 80%;
+    height: 60vh;
+    overflow: hidden;
     justify-content: center;
     display: flex;
+    align-items: center;
+    border-radius: 16px;
+}
+
+.peixe{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    animation: 20s carrosel infinite linear;
+}
+
+.img-logo{
+    height: 50vh;
+}
+
+@keyframes carrosel{
+    0%{
+        transform: translateX(50%);
+    }
+    100%{
+        transform: translateX(-45%);
+    }
+}
+
+.studi {
+    background-color: var(--light_menu);
+    border-radius: 5%;
+    width: 1100px;
+    height: 200vh;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
     flex-direction: column;
     gap: 10px;
 }
 
-.favoritos{
-    background-color: var(--light_menu);
-    border-radius: 5%;
-    width: 100%;
-    height: 80vh;
-}
-/*************************************************** entregas ********************************************/
-.entregas {
-    background-color: var(--light_corpo);
-    border-radius: 5%;
-    width: 1100px;
-    height: 130vh;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-}
-
-.tab-buttons {
-    display: flex;
-    gap: 6px;
-}
-
-.tab-btn {
-    width: 100%;
-    border: none;
-    color: var(--light_texto);
-    background-color: var(--light_titulo);
-    border-radius: 8px 8px 0px 0px;
-    font-weight: 500;
-    padding: 8px;
-    cursor: pointer;
-    transition: background-color .3s ease;
-}
-
-.tab-btn.active {
-    background-color: var(--light_menu);
-}
-
-.tab-btn:hover {
-    background-color: #a5b4fc;
-}
-
-.conteudo {
-    display: none;
-}
-
-.conteudo.show {
-    display: flex;
-    gap: 14px;
-    background-color: var(--light_menu);
-    border-radius: 0 0 5% 5%;
-    padding: 16px;
-    height:96%;
-    flex-direction: column;
-    align-items: center;
-}
-
-.content-img {
-    width: 90%;
-    height: 350px;
-    object-fit: cover;/* ponto de atenção para alterações fulturas*/
-}
-
-p.content-description, .content-title{
-    color: var(--light_texto);
-    font-size: 20px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-/**************************fim das entregas *****************************/
-
-h1.titulo{
+.studi .titulo{
     color: var(--light_titulo);
     text-align: center;
-    margin-bottom: 20px;
-    margin-top: 10px;
+    margin-top: 50px;
+    transform: scale(1.5);
 }
 
 .display {
@@ -745,6 +708,166 @@ iframe {
 
 .tabela-disciplinas th {
     background-color: #222;
+}
+
+
+
+/*************************************************** entregas ********************************************/
+.entregas {
+    background-color: var(--light_corpo);
+    border-radius: 5%;
+    width: 1100px;
+    height: 130vh;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+}
+
+.tab-buttons {
+    display: flex;
+    gap: 6px;
+}
+
+.tab-btn {
+    width: 100%;
+    border: none;
+    color: var(--light_texto);
+    background-color: var(--light_titulo);
+    border-radius: 8px 8px 0px 0px;
+    font-weight: 500;
+    padding: 8px;
+    cursor: pointer;
+    transition: background-color .3s ease;
+}
+
+.tab-btn.active {
+    background-color: var(--light_menu);
+}
+
+.tab-btn:hover {
+    background-color: var(--light_detalhe);
+}
+
+.conteudo {
+    display: none;
+}
+
+.conteudo.show {
+    display: flex;
+    gap: 14px;
+    background-color: var(--light_menu);
+    border-radius: 0 0 5% 5%;
+    padding: 16px;
+    height:96%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-img {
+    width: 90%;
+    height: 350px;
+    object-fit: cover;/* ponto de atenção para alterações fulturas*/
+}
+
+p.content-description, .content-title{
+    color: var(--light_texto);
+    font-size: 20px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+
+/**************************fim das entregas *****************************/
+.favoritos{
+    background-color: var(--light_menu);
+    border-radius: 5%;
+    width: 85%;
+    height: 80vh;
+}
+
+.favoritos .titulo{
+    color: var(--light_titulo);
+    text-align: center;
+    margin-bottom: 20px;
+    transform: scale(1.5);
+    margin-top: 25px;
+}
+
+
+.favoritos .titulo i{
+    color: red;
+}
+.projetos{
+    /* background-color: var(--light_menu); */
+    width: 100%;
+    height: 300vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.projetos  .titulo{
+    color: var(--light_titulo);
+    text-align: center;
+    margin-bottom: 20px;
+    transform: scale(1.5);
+}
+
+.filtro{
+    background-color: var(--light_menu);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    top: 0;
+    width: 69%;
+    border-radius: 32px;
+    height: 70px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 20px;
+}
+
+.filtro ul{
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
+.classe{
+    color: var(--light_titulo);
+    font-size: 20px;
+    font-weight: bold;
+    transform: scale(1.0);
+    cursor: pointer;
+    opacity: 0.3;
+}
+
+.classe:hover{
+    opacity: 1;
+}
+
+.classe.presente{
+    opacity: 1;
+}
+
+.navegacao{
+    background-color: var(--light_menu);
+    width: 1100px;
+    height: 270vh;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    overflow-y: scroll;
+    border-radius: 15px;
 }
 
 footer {
@@ -872,9 +995,7 @@ ul li.item-menu a:hover {
 }
 
 
-.studi.dark,
-.habili.dark,
-.projetos.dark,.favoritos.dark{
+.studi.dark, .navegacao.dark, .habili.dark, .filtro.dark,.favoritos.dark{
     background-color: var(--dark_menu);
 }
 
@@ -908,7 +1029,7 @@ p.content-description.dark, .content-title.dark{
 }
 
 
-h1.titulo.dark{
+.titulo.dark, .classe.dark{
     color: var(--dark_titulo);
 }
 .texto.dark, .servico.dark{
